# JNIMethodDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/netease/android/jnimethoddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BookManager.cpp  BookManager.h  CMakeLists.txt  ExceptionHelper.cpp  ExceptionHelper.h  ExceptionMethod.cpp  JNIAndroid.cpp  JNIAndroid.h  JNIInitHelper.cpp  JNILog.h  JNIUtil.cpp  JNIUtil.h  MethodA.cpp  MethodB.cpp  MethodC.cpp
app/src/main/java/com/netease/android/jnimethoddemo/: Book.java  BookManager.java  MainActivity.java  MethodA.java  MethodB.java  MethodC.java
app/src/main/java/com/netease/android/jnimethoddemo/exception/: ExceptionMethod.java  JNIException.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/netease/android/jnimethoddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
